# RayCraft

./: .gitignore  CMakeLists.txt  README.md
libs/raylib/src/: CMakeLists.txt
src/: main.cpp
src/Core/: Core.cpp  Core.hpp
src/Screen/: Screen.hpp
src/Screens/: MainMenu.cpp  MainMenu.hpp
src/Singletons/: CoreState.cpp  CoreState.hpp
